drm/i915: Fixes intel_crtc_disable_planes()

This commit fixes a problem where the plymouth boot splash is not shown
and the screen remains black until any kind of input action is done
after X has been started. The problem was introduced by the following
commit:

commit 27321ae88c70104df1ade701e079932b54360885
Author: Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
Date:   Tue Apr 21 17:12:52 2015 +0300

    drm/i915: Use the disable callback for disabling planes.

    This allows disabling all planes affecting a crtc without caring what type it is.

    Signed-off-by: Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
    Reviewed-by: Ander Conselvan de Oliveira <ander.conselvan.de.oliveira@intel.com>
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>

It has been reported upstream [1] and this commit applies a fix provided
by Maarten on the bug report. We should keep an eye for a commit fixing
this either upstream or on the stable tree for 4.2 for our next upstream
rebase.

[1] https://bugs.freedesktop.org/show_bug.cgi?id=91952

Signed-off-by: João Paulo Rechi Vita <jprvita@endlessm.com>

[endlessm/eos-shell#5698]